--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <script  src="/__/firebase/5.4.0/firebase-storage.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script  src="/__/firebase/init.js"></script>
+		<!-- material design mdl -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
  </head>
   <body>
  </body>
