added menu items

--- a/public/index.html
+++ b/public/index.html
@@ -25,25 +25,25 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">Title</span>
+      <span class="mdl-layout-title">YUEco Thesis and Dissertations</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
+        <a class="mdl-navigation__link" href="home.html">Home</a>
+        <a class="mdl-navigation__link" href="latest.html">Latest</a>
+        <a class="mdl-navigation__link" href="authors.html">Authors</a>
+        <a class="mdl-navigation__link" href="search.html">Search</a>
       </nav>
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Title</span>
+    <span class="mdl-layout-title">YUEco Thesis and Disserations</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" href="home.html">Home</a>
+      <a class="mdl-navigation__link" href="latest.html">Latest</a>
+      <a class="mdl-navigation__link" href="authors.html">Authors</a>
+      <a class="mdl-navigation__link" href="search.html">Search</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
