--- a/public/admin.html
+++ b/public/admin.html
@@ -47,8 +47,31 @@
 			<a class="mdl-navigation__link" href="admin.html">Admin</a>
     </nav>
   </div>
-  <main class="mdl-layout__content">
-    <div class="page-content"><!-- Your content goes here --></div>
+  <main class="mdl-layout__content" style="margin-left: auto; margin-right: auto">
+    <div class="page-content"><!-- Your content goes here -->
+		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+		<form action="#">
+			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+				<input class="mdl-textfield__input" type="text" id="internName">
+				<label class="mdl-textfield__label" for="sample3">Intern Name...</label>
+			</div>
+			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+				<input class="mdl-textfield__input" type="text" id="internID">
+				<label class="mdl-textfield__label" for="sample4">Student ID...</label>
+			</div>
+			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+				<input class="mdl-textfield__input" type="text" id="internTeam">
+				<label class="mdl-textfield__label" for="sample4">Team Name...</label>
+			</div>
+			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+				<input class="mdl-textfield__input" type="text" id="internProject">
+				<label class="mdl-textfield__label" for="sample4">Project Name...</label>
+			</div>
+      <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" type="submit" name="submit">Submit</button>
+
+		</form>
+		</div>
+		</div>
   </main>
 </div>
  </body>
