--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
       <a class="mdl-navigation__link" href="latest.html">Latest</a>
       <a class="mdl-navigation__link" href="authors.html">Authors</a>
       <a class="mdl-navigation__link" href="search.html">Search</a>
+			<a class="mdl-navigation__link" href="admin.html">Admin</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
