--- a/public/admin.html
+++ b/public/admin.html
@@ -18,6 +18,9 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+		<!-- jQuery -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
  </head>
  <body>
 <!-- Always shows a header, even in smaller screens. -->
@@ -67,7 +70,7 @@
 				<input class="mdl-textfield__input" type="text" id="internProject">
 				<label class="mdl-textfield__label" for="sample4">Project Name...</label>
 			</div>
-      <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" type="submit" name="submit">Submit</button>
+      <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" type="submit" name="submit" onclick="internsApp.Create()">Submit</button>
 
 		</form>
 		</div>
