--- a/public/admin.html
+++ b/public/admin.html
@@ -33,7 +33,7 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="home.html">Home</a>
+        <a class="mdl-navigation__link" href="index.html">Home</a>
         <a class="mdl-navigation__link" href="latest.html">Latest</a>
         <a class="mdl-navigation__link" href="authors.html">Authors</a>
         <a class="mdl-navigation__link" href="search.html">Search</a>
@@ -43,7 +43,7 @@
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">YUEco Thesis and Disserations</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="home.html">Home</a>
+      <a class="mdl-navigation__link" href="index.html">Home</a>
       <a class="mdl-navigation__link" href="latest.html">Latest</a>
       <a class="mdl-navigation__link" href="authors.html">Authors</a>
       <a class="mdl-navigation__link" href="search.html">Search</a>
