--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+		<!-- jQuery -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
  </head>
  <body>
 <!-- Always shows a header, even in smaller screens. -->
@@ -30,7 +33,7 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="home.html">Home</a>
+        <a class="mdl-navigation__link" href="index.html">Home</a>
         <a class="mdl-navigation__link" href="latest.html">Latest</a>
         <a class="mdl-navigation__link" href="authors.html">Authors</a>
         <a class="mdl-navigation__link" href="search.html">Search</a>
@@ -40,16 +43,18 @@
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">YUEco Thesis and Disserations</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="home.html">Home</a>
+      <a class="mdl-navigation__link" href="index.html">Home</a>
       <a class="mdl-navigation__link" href="latest.html">Latest</a>
       <a class="mdl-navigation__link" href="authors.html">Authors</a>
       <a class="mdl-navigation__link" href="search.html">Search</a>
 			<a class="mdl-navigation__link" href="admin.html">Admin</a>
     </nav>
   </div>
-  <main class="mdl-layout__content">
+  <main class="mdl-layout__content" style="margin-left: auto; margin-right: auto">
     <div class="page-content"><!-- Your content goes here --></div>
   </main>
 </div>
+ <script src="js/app.js"></script>
+ <script src="js/lib.js"></script>
  </body>
 </html>
