added table to display intern info

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,39 @@
     </nav>
   </div>
   <main class="mdl-layout__content" style="margin-left: auto; margin-right: auto">
-    <div class="page-content"><!-- Your content goes here --></div>
+    <div class="page-content"><!-- Your content goes here -->
+<table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+  <thead>
+    <tr>
+      <th class="mdl-data-table__cell--non-numeric">Student ID</th>
+      <th>Name</th>
+      <th>Team</th>
+			<th>Project</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">CS-1</td>
+      <td>Intern Name 1</td>
+      <td>Team Name 1</td>
+			<td>Project Name 2</td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">CS-2</td>
+      <td>Intern Name 2</td>
+      <td>Team Name 3</td>
+			<td>Project Name 1</td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">CS-3</td>
+      <td>Intern Name 3</td>
+      <td>Team Name 2</td>
+			<td>Project Name 3</td>
+    </tr>
+ 
+ </tbody>
+</table>
+</div>
   </main>
 </div>
  <script src="js/app.js"></script>
