--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,11 @@
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+		<!-- KnockOut -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script> 
+		 <script src="js/app.js"></script>
+ 		<script src="js/lib.js"></script>
+ 
  </head>
  <body>
 <!-- Always shows a header, even in smaller screens. -->
@@ -61,32 +65,17 @@
 			<th>Project</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody data-bind="foreach: internsBinding">
     <tr>
-      <td class="mdl-data-table__cell--non-numeric">CS-1</td>
-      <td>Intern Name 1</td>
-      <td>Team Name 1</td>
-			<td>Project Name 2</td>
+      <td class="mdl-data-table__cell--non-numeric"  data-bind="text: key">CS-1</td>
+      <td data-bind="text: name">Intern Name 1</td>
+      <td data-bind="text: team">Team Name 1</td>
+			<td data-bind="text: project">Project Name 2</td>
     </tr>
-    <tr>
-      <td class="mdl-data-table__cell--non-numeric">CS-2</td>
-      <td>Intern Name 2</td>
-      <td>Team Name 3</td>
-			<td>Project Name 1</td>
-    </tr>
-    <tr>
-      <td class="mdl-data-table__cell--non-numeric">CS-3</td>
-      <td>Intern Name 3</td>
-      <td>Team Name 2</td>
-			<td>Project Name 3</td>
-    </tr>
- 
- </tbody>
+</tbody>
 </table>
 </div>
   </main>
 </div>
- <script src="js/app.js"></script>
- <script src="js/lib.js"></script>
- </body>
+</body>
 </html>
