--- a/public/latest.html
+++ b/public/latest.html
@@ -20,7 +20,11 @@
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+		<!-- KnockOut -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script> 
+		<script src="js/latest.js"></script>
+	  <script src="js/lib.js"></script>		
+ 
  </head>
  <body>
 <!-- Always shows a header, even in smaller screens. -->
@@ -52,33 +56,22 @@
   </div>
   <main class="mdl-layout__content" style="margin-left: auto; margin-right: auto">
     <div class="page-content"><!-- Your content goes here -->
-		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-		<form action="#">
-			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				<input class="mdl-textfield__input" type="text" id="internName">
-				<label class="mdl-textfield__label" for="sample3">Intern Name...</label>
-			</div>
-			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				<input class="mdl-textfield__input" type="text" id="internID">
-				<label class="mdl-textfield__label" for="sample4">Student ID...</label>
-			</div>
-			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				<input class="mdl-textfield__input" type="text" id="internTeam">
-				<label class="mdl-textfield__label" for="sample4">Team Name...</label>
-			</div>
-			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				<input class="mdl-textfield__input" type="text" id="internProject">
-				<label class="mdl-textfield__label" for="sample4">Project Name...</label>
-			</div>
-      <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" type="submit" name="submit" onclick="internsApp.Create()">Submit</button>
-			<button onclick="logOut()">Logout</button>
-		</form>
-		</div>
-		</div>
+<ul class="demo-list-three mdl-list" data-bind="foreach: internsBinding">
+  <li class="mdl-list__item mdl-list__item--three-line mdl-shadow--2dp demo-card-wide" style="height:100px; width: 512px">
+    <span class="mdl-list__item-primary-content">
+      <i class="material-icons mdl-list__item-avatar">person</i>
+      <span data-bind="text: name">Ravi</span>
+      <span class="mdl-list__item-text-body">
+			Student ID: <span data-bind="text: key"><b>CS-1</b></span><br>Team: <span data-bind="text: team">Alpha</span><br>Project: <span data-bind="text: project" >Alpha</span>
+      </span>
+    </span>
+    <span class="mdl-list__item-secondary-content">
+      <!--<a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">star</i></a> -->
+    </span>
+  </li>
+</ul>
+</div>
   </main>
 </div>
- <script src="js/app.js"></script>
- <script src="js/lib.js"></script>
- <script src="admin.js"></script>
- </body>
+</body>
 </html>
