--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,14 @@
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+		<!-- KnockOut -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script> 
+		<!-- Firebase-UI -->
+		<script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
+		<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
+		 <script src="js/app.js"></script>
+ 		<script src="js/lib.js"></script>
+ 
  </head>
  <body>
 <!-- Always shows a header, even in smaller screens. -->
@@ -52,33 +59,10 @@
   </div>
   <main class="mdl-layout__content" style="margin-left: auto; margin-right: auto">
     <div class="page-content"><!-- Your content goes here -->
-		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-		<form action="#">
-			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				<input class="mdl-textfield__input" type="text" id="internName">
-				<label class="mdl-textfield__label" for="sample3">Intern Name...</label>
-			</div>
-			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				<input class="mdl-textfield__input" type="text" id="internID">
-				<label class="mdl-textfield__label" for="sample4">Student ID...</label>
-			</div>
-			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				<input class="mdl-textfield__input" type="text" id="internTeam">
-				<label class="mdl-textfield__label" for="sample4">Team Name...</label>
-			</div>
-			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				<input class="mdl-textfield__input" type="text" id="internProject">
-				<label class="mdl-textfield__label" for="sample4">Project Name...</label>
-			</div>
-      <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" type="submit" name="submit" onclick="internsApp.Create()">Submit</button>
-			<button onclick="logOut()">Logout</button>
-		</form>
+		<div id="firebaseui-auth-container"></div>
+		<div id="loader"></div>
 		</div>
-		</div>
-  </main>
-</div>
- <script src="js/app.js"></script>
- <script src="js/lib.js"></script>
- <script src="admin.js"></script>
- </body>
+ </main>
+<script src="login.js"></script>
+</body>
 </html>
